--- a/arith/index.html
+++ b/arith/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-   <title>CS 358 Arithmetic Mystery Language</title>
+   <title>CS 358 Arithmetic Mystery Language (Portland State University)</title>
     <script src="./lexer.js"></script>
     <script src="./main.js"></script>
     <script src="./display.js"></script>
@@ -55,5 +55,6 @@
     <textarea id="outputLog" rows="8" cols="96"></textarea>
   </form>
 
+  <div class="section"><p>Original author: Andrew Tolmach</p></div>
   </body>
 </html>
